ClashAccess is completed